--- a/rakhi-experience/package.json
+++ b/rakhi-experience/package.json
@@ -7,7 +7,7 @@
 		"build": "next build",
 		"export": "npm run build && next export -o _static",
 		"start": "next start",
-		"lint": "eslint --ext .ts,.tsx",
+		"lint": "next lint",
 		"lint:fix": "eslint --ext .ts,.tsx --fix"
 	},
 	"husky": {
@@ -21,11 +21,7 @@
 		"pretty-quick": "^3.1.0",
 		"react": "17.0.2",
 		"react-dom": "17.0.2",
-		"react-player": "^2.9.0",
-		"react-typed": "^1.2.0",
-		"swr": "^0.4.0",
-		"use-client-router": "^1.0.4",
-		"use-clippy": "^1.0.8"
+		"react-player": "^2.9.0"
 	},
 	"devDependencies": {
 		"@fullhuman/postcss-purgecss": "^3.1.3",
@@ -34,16 +30,11 @@
 		"@types/react": "^16.9.35",
 		"@typescript-eslint/eslint-plugin": "^3.2.0",
 		"@typescript-eslint/parser": "^3.2.0",
-		"eslint": "^7.2.0",
-		"eslint-config-prettier": "^6.11.0",
-		"eslint-plugin-prettier": "^3.1.3",
-		"eslint-plugin-react": "^7.20.0",
-		"husky": "^4.2.5",
-		"lint-staged": "^10.2.9",
+		"eslint": "^7.32.0",
 		"postcss-preset-env": "^6.7.0",
 		"prettier": "^2.0.5",
 		"tailwind-heropatterns": "^0.0.8",
 		"tailwindcss": "1.9.6",
-		"typescript": "^3.9.3"
+		"typescript": "^4.3.5"
 	}
 }
